--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-sass": "^1.3.2",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.6",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.10",
     "karma-junit-reporter": "^0.2.2",
